# bsky

./: .gitignore  .pre-commit-config.yaml  README.md  hello.py  hello.tcss  pyproject.toml  tui.py
.github/workflows/: publish.yml
bskytui/: __init__.py  app.py  bskytui.tcss  main.py
bskytui/config/: settings.py
bskytui/services/: bsky.py
bskytui/utils/: formatters.py
bskytui/widgets/: post.py  stats.py
