[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bskytui"
version = "0.0.1-alpha.0"
requires-python = ">=3.12"
dependencies = ["atproto", "textual", "pydantic-settings"]

[project.scripts]
bskytui = "bskytui.app:main"

[tool.hatch.metadata]
allow-direct-references = true
